fix: edit db settings

--- a/BookParserAPI/Properties/launchSettings.json
+++ b/BookParserAPI/Properties/launchSettings.json
@@ -5,9 +5,9 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "Production",
         "DataBaseOptions:Server":"127.0.0.1",
-        "DataBaseOptions:Port":"5432",
+        "DataBaseOptions:Port":"3308",
         "DataBaseOptions:DatabaseName":"OrderDataBase",
         "DataBaseOptions:UserName":"root",
         "DataBaseOptions:Password":"password"
@@ -16,3 +16,4 @@
     }
   }
 }
+    
