--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 ﻿version: "3.8"
 
 services:
-  postgres:
-    image: postgres:15
+  mysql:
+    image: mysql:8.0
     environment:
-      POSTGRES_DB: "order"
-      POSTGRES_USER: "root"
-      POSTGRES_PASSWORD: "password"
+      MYSQL_ROOT_PASSWORD: "password"
     ports:
-      - "5432:5432"
+      - "3308:3306"
