--- a/BookParserAPI/appsettings.json
+++ b/BookParserAPI/appsettings.json
@@ -1,4 +1,4 @@
-{ 
+{
   "Kestrel": {
     "Endpoints": {
       "Http": {
@@ -12,7 +12,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataBaseOptions": {
+    "Server": "127.0.0.1",
+    "DatabaseName": "OrderDataBase",
+    "UserName": "root",
+    "Password": "password",
+    "Port":"3308"
+  }
 
-  
-}
+  }
