--- a/BookParserAPI/BookParserAPI.csproj
+++ b/BookParserAPI/BookParserAPI.csproj
@@ -16,6 +16,7 @@
       </PackageReference>
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
+      <PackageReference Include="Serilog.AspNetCore" Version="6.1.1-dev-00293" />
     </ItemGroup>
 
 </Project>
