--- a/BookParserAPI/Properties/launchSettings.json
+++ b/BookParserAPI/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "HTTPApiTemplate": {
+    "BookParserAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
