--- a/BookParserAPI/BookParserAPI.csproj
+++ b/BookParserAPI/BookParserAPI.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="AngleSharp" Version="1.0.1" />
       <PackageReference Include="AutoMapper" Version="11.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.13" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
